--- a/pp-01/screen.css
+++ b/pp-01/screen.css
@@ -173,4 +173,21 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
    font: inherit; /* 2 */
  }
 
- 
+html {
+  font-size: 1.25em; /* 20 / 16 = 1.25 */
+  line-height: 1.5em; /* 30 / 20 = 1.5 */
+  font-family: Georgia, "Times New Roman", Times, serif;
+  background-color: #efefef;
+}
+
+body,
+form#contact-form {
+  padding-top: 1.5em; /* 30 / 20 = 1.5 */
+  padding-bottom: 1.5em; /* 30 / 20 = 1.5 */
+  padding-left: 1.2em; /* 24 / 20 = 1.2 */
+  padding-right: 1.2em; /* 24 / 20 = 1.2 */
+}
+
+form#contact-form {
+  background-color: #ffffff;
+}
